--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Big Poppa Code Starter Kit</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/styles.css">
-<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-b53f7e.58b9e340c3904c3f1ee4.js?911da6fd01ef91038c47"></script><script defer src="js/dist/App.d873c8a274f8cd604223.js?911da6fd01ef91038c47"></script><script defer src="js/dist/main.0fc268a4df68544f5b0a.js?911da6fd01ef91038c47"></script></head>
-
-<body>
-  <div id="app"></div>
-
-</body>
-
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>Big Poppa Code Starter Kit</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/css/styles.css"><script defer="defer" src="js/dist/202.2e13c65382e21359e4e1.js?da6c59f8f8204fc528cd"></script><script defer="defer" src="js/dist/App.cac82c2f689d238d7676.js?da6c59f8f8204fc528cd"></script><script defer="defer" src="js/dist/main.da072b16b93a0776c82d.js?da6c59f8f8204fc528cd"></script></head><body><div id="app"></div></body></html>
